Wb2 (#115)
* trying to fix search

* fixing the search again

* next try with search pagination

---------
